m04a02summean-handout/grading/2024-09-23-17-33-18/compile.err
SumMean.java:20: error: incompatible types: int cannot be converted to boolean
        if (input /= 0) {
                  ^
1 error
